Feat-FDT: Overhauled The Context Menu.